# Aquanaute

./: .gitignore  .gitignore.swp  README.md
aquanaute_description/: CMakeList.txt  CMakeLists.txt  package.xml
aquanaute_description/ardu_params/: aquanaute.parm  real_params_NOT-TESTED.params
aquanaute_description/launch/: description.launch
aquanaute_description/models/cao/fusion360/: Direction_Motor_Mount.f3d  Motor.f3d  Platform.f3d  Propeller.f3d  electronics_box.f3d  sensor_frame.f3d
aquanaute_description/models/cao/inventor2019/: Direction_Motor_Mount.ipt  Motor.ipt  Platform.ipt  Propeller.ipt  electronics_box.ipt  sensor_frame.ipt
aquanaute_description/models/cao/inventor2019/Assambly_aquanaute/: Assambly_aquanaute.iam  Motor v4.ipt  Platform v3.ipt  sensor_frame v2.ipt
aquanaute_description/models/cao/stp/: Assambly_aquanaute.stp  Hull.stp  Motor.stp  Platform.stp  Propeller.stp  sensor_frame.stp
aquanaute_description/models/mesh/: Hull.stl  Motor.stl  Platform.stl  sensor_frame.stl
aquanaute_description/models/meshes/: Assambly_aquanaute.stl  Direction_Motor_Mount.stl  Hull.stl  Motor.stl  Platform.stl  Propeller.stl  electronics_box.stl  sensor_frame.stl
aquanaute_description/rviz/: aquanaute.rviz
aquanaute_description/urdf/: aquanaute.urdf  aquanaute_description.urdf.xacro  tmp.urdf
aquanaute_gazebo/: CMakeList.txt  CMakeLists.txt  package.xml
aquanaute_gazebo/launch/: aquanaute.launch  empty_world.launch  lac_world.launch  spawn_aquanaute.launch  test.launch  world.launch
aquanaute_gazebo/urdf/: aquanaute_gazebo.urdf.xacro  aquanaute_gazebo.xacro  macros.xacro
aquanaute_gazebo/urdf/dynamics/: aquanaute_gazebo_dynamics_plugin.xacro
aquanaute_gazebo/worlds/: empty.world  test.world
arduino_code/adapter_motor/: adapter_motor.ino
ardupilot_parameters/: params_for_test2.params  params_from_test1.params  sitl_params.parm
documentation/CAD/fusion360/: Platform.f3d
documentation/CAD/inventor2019/: sensor_frame.ipt
documentation/CAD/stp/: Assambly_aquanaute.stp  Direction_Motor_Mount.stp  Platform.stp  electronics_box.stp  sensor_frame.stp
documentation/Stereo_Analisis/: new_mesh.mix
documentation/tests_logs/: 2020-07-30 16-50-21.tlog  2020-07-30 16-56-31.tlog  2020-07-30 17-00-58.tlog  2020-07-30 17-02-32.tlog  2020-07-31 09-07-15.tlog  2020-07-31 09-11-08.tlog  2020-07-31 10-12-39.tlog  2020-07-31 10-42-31.tlog  2020-07-31 16-44-19.tlog  2020-07-31 17-01-54.tlog
vrx_gazebo/: CMakeLists.txt  package.xml
vrx_gazebo/launch/: sandisland.launch
vrx_gazebo/worlds/: ocean.world.xacro  sandisland.xacro
vrx_gazebo/worlds/xacros/: usv_wind_plugin.xacro
wave_gazebo/world_models/ocean_waves/: model.xacro
