<?xml version="1.0"?>
<package>
  <name>aquanaute_gazebo</name>
  <version>0.4.2</version>
  <description>Aquanaute Simulator bringup</description>

  <author email="ricardo.rico-uribe@ensta-paris.fr">Ricardo RICO URIBE</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>aquanaute_description</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>

